--- a/2장 엘라스틱서치 기본 동작과 구조/2.2 엘라스틱서치 구조 개괄.md
+++ b/2장 엘라스틱서치 기본 동작과 구조/2.2 엘라스틱서치 구조 개괄.md
@@ -8,9 +8,9 @@
 - _id : 인덱스 내 문서에 부여되는 고유한 구분자다. 인덱스 이름과 _id 이름의 조합은 엘라스틱서치 클러스터 내에서 고유하다.
 - **타입** : 엘라스틱서치는 과거에 하나의 인덱스 안에 있는 여러 문서를 묶어서 타입이라는 논리단위로 나눴다. 하지만 엘라스틱서치 6부터는 인덱스 하나에 타입 하나만 둘 수 있게 제한했고, 7버전 부터는 여러 API 에서 타입을 명시하는 부분들이 지원 중단(deprecated)됐다. 타입 이름이 들어가야 할 자리에는 기본값인 _doc이 들어간 API를 사용해야 한다. 사용할 일 X
 
-![2.3 엘라스틱서치 클러스터](https://github.com/tkdals2317/elastic-search-study/assets/49682056/24e4e7ed-bf15-4ec9-835a-a97a1d4b4d6b)
+![그림 2.3 엘라스틱서치 클러스터(빨간 색이 주 샤드, 검은 색이 복제본 샤드)](https://github.com/tkdals2317/elastic-search-study/assets/49682056/24e4e7ed-bf15-4ec9-835a-a97a1d4b4d6b)
 
-그림 2.3 엘라스틱서치 클러스터(빨간 색이 주 샤드, 검은 색이 복제본 샤드)
+
 
 - **노드** : **엘라스틱서치 프로세스 하나**가 **노드 하나**를 구성한다. 엘라스틱서치 노드 하나는 **여러개의 샤드**를 가진다. **엘라스틱서치는 고가용성을 제공하기 위해 같은 종류의 샤드를 같은 노드에 배치하지 않는다**. 0번 주 샤드와 복제본 샤드는 같은 노드에 배치되지 않는다. 0번 복제본 샤드 두 개가 같은 노드에 배치되지도 않는다.
 - 클러스터 : 이러한 엘라스틱서치 노드가 여러 개가 모여 하나의 클러스터를 구성한다.
