--- a/2장 엘라스틱서치 기본 동작과 구조/2.2 엘라스틱서치 구조 개괄.md
+++ b/2장 엘라스틱서치 기본 동작과 구조/2.2 엘라스틱서치 구조 개괄.md
@@ -1,3 +1,5 @@
+## 2.2 엘라스틱서치 구조 개괄
+
 이번 절에서는 엘라스틱서치의 기본 구조를 개괄적으로 살펴보고 기본적인 용어들을 알아본다.
 
 ![2.2 엘라스틱서치 인덱스와 샤드](https://github.com/tkdals2317/elastic-search-study/assets/49682056/f65458a3-e749-4a4d-986e-35ff456305a3)
