:memo: 3장 인덱스 설계 개요, 3.1 인덱스 설계 정리자료 업로드

--- a/3장 인덱스 설계/3.1 인덱스 설정.md
+++ b/3장 인덱스 설계/3.1 인덱스 설정.md
@@ -13,7 +13,7 @@ GET [인덱스 이름]/_settings
 
 기존에 존재하지 않는 인덱스에 문서 색인 요청을 하면 엘라스틱서치는 인덱스를 자동으로 생성한다. 자동으로 생성된 인덱스는 어떤 값을 가지는지 확인해보자
 
-```json
+```http request
 GET my_index/_settings
 ```
 
