:memo: 4.3 검색 API 정리자료 업로드

--- a/4장 데이터 다루기/4.3. 검색 API.md
+++ b/4장 데이터 다루기/4.3. 검색 API.md
@@ -809,3 +809,9 @@ GET _search
 ```
 
 pit도 다 사용한 뒤에는 명시적으로 삭제해줄 수 있다.
+```
+DELETE _pit
+{
+  "id": "697qAwEca2liYW5hX3NhbXBsZV9kYXRhX2Vjb21tZXJjZRYwRHh4SEowUFJjZTJmNzN0bTdKRmVnABZwaDkzelNRT1JpNnZQQlY3U2xFOFJ3AAAAAAAAABp6FlpDcnBPY3o3UUphTXZLZExpWV9TcEEAARYwRHh4SEowUFJjZTJmNzN0bTdKRmVnAAA="
+}
+```
